--- a/artie-dashboard/frontend/package.json
+++ b/artie-dashboard/frontend/package.json
@@ -21,6 +21,9 @@
     "typescript": "^5.5.4",
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0"
+    "@types/react-dom": "^18.3.0",
+    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.32",
+    "autoprefixer": "^10.4.16"
   }
 }
