Fix vercel.json to properly build from artie-dashboard/frontend subdirectory

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,15 @@
 {
-  "buildCommand": "cd artie-dashboard/frontend && npm install && npm run build",
-  "outputDirectory": "artie-dashboard/frontend/.next",
-  "installCommand": "cd artie-dashboard/frontend && npm install",
-  "framework": null
+  "version": 2,
+  "builds": [
+    {
+      "src": "artie-dashboard/frontend/package.json",
+      "use": "@vercel/next"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "artie-dashboard/frontend/$1"
+    }
+  ]
 }
