Fix vercel.json: Use rootDirectory config to build from subdirectory

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,8 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "artie-dashboard/frontend/package.json",
-      "use": "@vercel/next"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "artie-dashboard/frontend/$1"
-    }
-  ]
+  "buildCommand": "cd artie-dashboard/frontend && npm install && npm run build",
+  "outputDirectory": "artie-dashboard/frontend/.next",
+  "installCommand": "cd artie-dashboard/frontend && npm install",
+  "devCommand": "cd artie-dashboard/frontend && npm run dev",
+  "framework": "nextjs",
+  "rootDirectory": "artie-dashboard/frontend"
 }
