--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,10 @@ frontend/out/
 frontend/.vercel/
 frontend/.turbo/
 frontend/.cache/
+# ALL node_modules directories
+**/node_modules/
+elas-erp/frontend/node_modules/
+artie-dashboard/frontend/node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
