--- a/elas-erp/backend/requirements.txt
+++ b/elas-erp/backend/requirements.txt
@@ -6,6 +6,7 @@ uvicorn[standard]==0.32.0
 python-multipart==0.0.9
 pydantic==2.12.4
 pydantic-settings==2.6.1
+email-validator==2.1.0
 
 # DB
 SQLAlchemy==2.0.35
