--- a/elas-erp/.gitignore
+++ b/elas-erp/.gitignore
@@ -1,5 +1,42 @@
+# Python
 .venv/
-node_modules/
 __pycache__/
+*.pyc
+*.pyo
+*.log
+
+# Node/Next.js
+node_modules/
+.next/
+out/
 dist/
+.vercel/
+
+# Environment variables (sensitive)
 .env
+.env.local
+.env.production
+.env.development
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Master rules (local only)
+RULES.md
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Test outputs
+test-results/
+coverage/
