Add E2E testing infrastructure: GitHub Actions, Playwright, pytest, pre-push hooks

--- a/elas-erp/.gitignore
+++ b/elas-erp/.gitignore
@@ -39,4 +39,9 @@ Thumbs.db
 
 # Test outputs
 test-results/
+playwright-report/
+test.db
+test.db-journal
 coverage/
+.pytest_cache/
+*.pytest_cache
