--- a/elas-erp/frontend/package.json
+++ b/elas-erp/frontend/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "next dev -p 4000",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 4000",
+    "test:e2e": "playwright test",
+    "test:e2e:ci": "playwright test --reporter=line"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.80.0",
@@ -20,6 +22,7 @@
     "vega-lite": "^5.20.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.47.2",
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
