--- a/elas-erp/frontend/package.json
+++ b/elas-erp/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.80.0",
     "@tanstack/react-query": "^5.51.9",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.7.7",
     "next": "14.1.0",
     "react": "^18.3.1",
