--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,9 @@
     "vega": "^5.30.0",
     "vega-lite": "^5.20.0"
   },
+  "optionalDependencies": {
+    "canvas": "^2.11.0"
+  },
   "devDependencies": {
     "@playwright/test": "^1.47.2",
     "@types/node": "^20.14.11",
