chore(rebrand): complete VizPilot branding across all backend, deploy, and doc files; update health endpoint and env templates; verified build successful

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,6 +18,6 @@ ALLOWED_ORIGINS=http://localhost:4000,https://your-app.vercel.app
 
 # Application
 APP_ENV=development
-APP_NAME=Elas ERP Backend
+APP_NAME=VizPilot Backend
 APP_HOST=0.0.0.0
 APP_PORT=8000
