--- a/backend/.env.template
+++ b/backend/.env.template
@@ -10,7 +10,7 @@ SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 GROQ_API_KEY=your_groq_api_key_here
 
 # Application Settings
-APP_NAME=Elas ERP
+APP_NAME=VizPilot
 APP_ENV=development
 DEBUG=True
 
@@ -30,7 +30,7 @@ ALLOWED_FILE_TYPES=.csv,.xlsx,.xls,.pdf,.docx,.txt
 # Email Service (Resend recommended)
 # RESEND_API_KEY=your_resend_api_key_here
 # EMAIL_FROM=noreply@yourdomain.com
-# EMAIL_FROM_NAME=Elas ERP
+# EMAIL_FROM_NAME=VizPilot
 
 # Frontend URL (for email links)
 FRONTEND_URL=http://localhost:4000
